--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+body{
+  background:aqua;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+  width: 100px;
+  height: 50px;
+  border-radius: 20px;
+  border-color: red;
+  transition: all 0.5s linear;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover{
+  width: 100px;
+  color: aqua;
+  background:black;
+  border: none;
+  transform: rotate(360deg);
+  border-radius: 10px;
 }
