--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,15 @@
-body{
-  background:aqua;
+.boxer {
+  display: flex;
 }
-button{
-  width: 100px;
-  height: 50px;
-  border-radius: 20px;
-  border-color: red;
-  transition: all 0.5s linear;
+.container {
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid red; */
+  width: 100%;
 }
-button:hover{
-  width: 100px;
-  color: aqua;
-  background:black;
-  border: none;
-  transform: rotate(360deg);
+.content1 {
+  width: 240px;
+  /* border: 1px solid; */
+  border-right:2px solid #d8d7d7;
   border-radius: 10px;
 }
