--- a/src/body.css
+++ b/src/body.css
@@ -23,7 +23,7 @@
   height: 82px;
   left: 1053px;
   top: 144px;
-
+transition:all 0.2s linear;
   /* cards bg */
 
   background: #fefeff;
@@ -36,6 +36,11 @@
   border-radius: 10px;
   margin-left: 75px;
   margin-top: 1px;
+}
+.card:hover{
+  width: 80px;
+  height: 82px;
+  box-shadow: 5px 5px 35px aqua;
 }
 .pulsCard {
   width: 40px;
@@ -59,7 +64,7 @@
 }
 .older {
   display: flex;
-  margin-top: 70px;
+  padding-top: 70px;
   align-items: flex-start ;
   /* justify-content: flex-start; */
 }
