--- a/src/navbar.css
+++ b/src/navbar.css
@@ -11,6 +11,9 @@
   height: 35px;
   /* justify-content: center;/ */
 }
+.input:hover{
+  cursor:text;
+}
 .input2 {
   display: flex;
   align-items: center;
@@ -23,6 +26,9 @@
   margin-top: 20px;
   margin-left: 50px;
   height: 35px;
+}
+.input2:hover{
+  cursor:text;
 }
 .obshiy-input{
     display: flex;
@@ -37,6 +43,21 @@
     width: 20px;
     height: 20px;
     margin-right: 45px;
+    transition: all 0.3s linear;
+    /* border: 1px solid red; */
+}
+.a:hover{
+  cursor: pointer;
+  transform: rotate(360deg);
+  border-bottom: 4px solid rgb(0, 255, 21) ;
+}
+.odam{
+  transition: all 0.3s linear;
+}
+.odam:hover{
+  cursor: pointer;
+  transform: rotate(360deg);
+  border-bottom: 4px solid rgb(0, 255, 21) ;
 }
 .iconsintheright{
     display: flex;
