--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -13,8 +13,9 @@ h1 {
 .for-img {
   display: flex;
   margin-top: 12px;
-  margin-left: 40px;
+  padding-left: 40px;
   align-items: center;
+  transition: all 0.3s linear;
   /* justify-content: center; */
 }
 .rasm {
@@ -34,6 +35,10 @@ h1 {
   margin-left: 40px;
   margin-bottom: 18px;
 }
+.menu-word:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
 .races {
   font-family: Product Sans;
   font-style: normal;
@@ -45,6 +50,10 @@ h1 {
   margin-left: 40px;
   color: #3629b7;
 }
+.races:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
 .kolso {
   font-family: Product Sans;
   font-style: normal;
@@ -55,14 +64,54 @@ h1 {
   margin-right: 10px;
   color: #838383;
 }
+
 .circle {
   display: flex;
   align-items: center;
   margin-top: 25px;
-  margin-left: 40px;
+  padding-left: 40px;
+}
+.wery{
+  transition: all 0.3s linear;
+}
+.wery:hover{
+  background:rgb(37, 109, 177,0.5) ;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 15px;
+  cursor: pointer;
+}
+.wert{
+  transition: all 0.3s linear;
+}
+.wert:hover{
+  background:rgba(177, 49, 49, 0.5) ;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 15px;
+  cursor: pointer;
+}
+.werf{
+  transition: all 0.3s linear;
+}
+.werf:hover{
+  background:rgba(28, 196, 187, 0.5) ;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 15px;
+  cursor: pointer;
+  
 }
 .rasm1 {
   margin-right: 10px;
   width: 13px;
   height: 13px;
+}
+.for-img:hover{
+  color: rgb(39, 180, 39);
+  cursor: pointer;
+  background: rgb(63, 49, 141);
+  padding-left: 50px;
+  border-radius: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
